@@ -2,5 +2,7 @@ loglevel=debug
 device=must_be_overriden
 logtelegrams=false
 format=json
-shell=echo METER =="$METER_JSON"== =="$METER_address"== =="$METER_floor"== > /tmp/wmbusmeters_meter_additional_json_test
+shell=echo METER =="$METER_JSON"== =="$METER_address"== =="$METER_city"== =="$METER_floor"== =="$METER_elevator"== > /tmp/wmbusmeters_meter_additional_json_test
+# The json_ prefix and field_ prefix are equivalent.
 json_address=RoodRd 42
+field_city=Stockholm
