@@ -3,3 +3,4 @@ type=supercom587
 id=12345678
 key=
 json_floor=5
+field_elevator=ABC
