@@ -8,7 +8,7 @@ TESTNAME="Test additional json from cmdline"
 TESTRESULT="ERROR"
 
 cat simulations/simulation_additional_json.txt | grep '^{' > $TEST/test_expected.txt
-$PROG --format=json --json_floor=5 --json_address="RoodRd 42" simulations/simulation_additional_json.txt \
+$PROG --format=json --json_floor=5 --json_address="RoodRd 42" --field_city="Stockholm" simulations/simulation_additional_json.txt \
       MyTapWater multical21 76348799 "" \
       > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
@@ -41,6 +41,9 @@ METER_NAME
 METER_MEDIA
 METER_TYPE
 METER_TIMESTAMP
+METER_TIMESTAMP_UTC
+METER_TIMESTAMP_UT
+METER_TIMESTAMP_LT
 METER_DEVICE
 METER_RSSI_DBM
 METER_TOTAL_M3
@@ -69,16 +72,19 @@ if [ "$TESTRESULT" = "ERROR" ]; then echo ERROR: $TESTNAME;  exit 1; fi
 TESTNAME="Test additional json from wmbusmeters.conf and from meter file"
 TESTRESULT="ERROR"
 
-$PROG --useconfig=tests/config6 --device=simulations/simulation_shell.txt  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
+$PROG --debug --useconfig=tests/config6 --device=simulations/simulation_shell.txt  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
 if [ "$?" = "0" ]
 then
     INFO=$(cat /tmp/wmbusmeters_meter_additional_json_test | sed 's/"timestamp":"....-..-..T..:..:..Z"/"timestamp":"1111-11-11T11:11:11Z"/')
-    EXPECTED=$(echo 'METER =={"media":"warm water","meter":"supercom587","name":"Water","id":"12345678","total_m3":5.548,"timestamp":"1111-11-11T11:11:11Z","floor":"5","address":"RoodRd 42"}== ==RoodRd 42== ==5==')
+    EXPECTED=$(echo 'METER =={"media":"warm water","meter":"supercom587","name":"Water","id":"12345678","total_m3":5.548,"timestamp":"1111-11-11T11:11:11Z","floor":"5","elevator":"ABC","address":"RoodRd 42","city":"Stockholm"}== ==RoodRd 42== ==Stockholm== ==5== ==ABC==')
     if [ "$INFO" = "$EXPECTED" ]
     then
         echo "OK: $TESTNAME"
         TESTRESULT="OK"
+    else
+        echo "INFO    =>$INFO<"
+        echo "EXPECTED=>$EXPECTED<"
     fi
 fi
 
