@@ -1,4 +1,7 @@
 
+Added the field timestamp_ut to print the existing timestamp field
+using unix timestamp seconds since 1970-01-01.
+
 Daniel Glaser added support for the Aventies water meter! Thanks Daniel!
 
 Mblnk added support for Qundis QWater5.5. Thanks Mblnk!
